# module-jni

./: .gitignore  .gitlab-ci.yml  .jenkins.prop  CMakeLists.txt  README  README.md  make-bootstrap-qjavac  make-inc  make-jar  qore-jni-module.spec
docs/: Doxyfile.in  mainpage.dox.tmpl
java/org/qore/jni/: InvocationHandlerImpl.java  QoreExceptionWrapper.java  QoreURLClassLoader.java
qlib/BusyLightDataProvider/: BusyLightConnection.qc  BusyLightDataProvider.qc  BusyLightDataProvider.qm  BusyLightDataProviderFactory.qc
qlib/ExcelDataProvider/: ExcelDataProvider.qm  ExcelReadDataProvider.qc  ExcelReadDataProviderFactory.qc  ExcelWorksheetReadDataProvider.qc
qlib/MqttDataProvider/: AbstractFunctionalMqttDataProvider.qc  AbstractMqttDataProvider.qc  MqttConnection.qc  MqttConnectionWrapper.qc  MqttDataProvider.qc  MqttDataProvider.qm  MqttDataProviderFactory.qc  MqttDevicesDataProvider.qc  MqttEventDataType.qc  MqttMessageDataType.qc
src/: Array.cpp  Array.h  Class.cpp  Class.h  DescriptorParser.h  Dispatcher.cpp  Dispatcher.h  Env.cpp  Env.h  Field.cpp  Field.h  Functions.h  GlobalReference.cpp  GlobalReference.h  Globals.cpp  Globals.h  InvocationHandler.cpp  InvocationHandler.h  JavaClassInvocationHandlerImpl.inc  JavaClassQoreExceptionWrapper.inc  JavaClassQoreInvocationHandler.inc  JavaClassQoreURLClassLoader$1.inc  JavaClassQoreURLClassLoader.inc  JavaToQore.cpp  JavaToQore.h  JniEnv.cpp  JniEnv.h  JniQoreClass.cpp  JniQoreClass.h  Jvm.cpp  Jvm.h  LocalReference.h  Method.cpp  Method.h  ModifiedUtf8String.h  Object.h  QC_Array.qpp  QC_Class.qpp  QC_Constructor.qpp  QC_Field.qpp  (+38 more)
src/docs/: mainpage.dox
src/java/org/qore/dataprovider/excel/: ExcelIterator.java
src/java/org/qore/jni/: BooleanWrapper.java  ClassModInfo.java  Hash.java  JavaClassBuilder.java  QoreClosure.java  QoreClosureMarker.java  QoreClosureMarkerImpl.java  QoreException.java  QoreExceptionWrapper.java  QoreHashMap.java  QoreInvocationHandler.java  QoreJavaApi.java  QoreJavaClassBase.java  QoreJavaDynamicApi.java  QoreJavaDynamicClassData.java  QoreJavaFileObject.java  QoreJavaObjectPtr.java  QoreObject.java  QoreObjectBase.java  QoreObjectWrapper.java  QoreRelativeTime.java  QoreURLClassLoader.java
src/java/org/qore/jni/compiler/: CompilerOutput.java  CustomJavaFileObject.java  PackageInternalsFinder.java  QoreJavaClassObject.java  QoreJavaCompiler.java  QoreJavaCompilerException.java  QoreJavaFileManager.java
src/java/org/qore/lang/: AbstractDatasource.java  AbstractIterator.java  AbstractSQLStatement.java  DatasourcePool.java  HTTPClient.java  HashListIterator.java  LogCallback.java
src/java/org/qore/lang/bulksqlutil/: AbstractBulkOperation.java  BulkInsertOperation.java  BulkRowCallback.java  BulkUpsertOperation.java
src/java/org/qore/lang/dataprovider/: AbstractDataField.java  AbstractDataProcessor.java  AbstractDataProvider.java  AbstractDataProviderBulkOperation.java  AbstractDataProviderBulkRecordInterface.java  AbstractDataProviderRecordIterator.java  AbstractDataProviderType.java
src/java/org/qore/lang/mailmessage/: Attachment.java  Message.java  Part.java
src/java/org/qore/lang/mapper/: Mapper.java  MapperOutputRecordIterator.java  RawSqlStatementOutboundMapper.java
src/java/org/qore/lang/qunit/: AbstractTestResult.java  Test.java  TestCode.java  TestCodeArgs.java  TestCondition.java  TestConditionArgs.java  TestResultExceptionDetail.java  TestResultExceptionRegexp.java  TestResultExceptionSubstring.java  TestResultExceptionType.java  TestResultFailure.java  TestResultSuccess.java  TestResultValue.java
src/java/org/qore/lang/reflection/: Type.java
src/java/org/qore/lang/restclient/: RestClient.java
src/java/org/qore/lang/smtpclient/: SmtpClient.java
src/java/org/qore/lang/soapclient/: SoapClient.java
src/java/org/qore/lang/sqlutil/: AbstractSqlUtilBase.java  AbstractTable.java  Table.java
src/java/org/qore/lang/tablemapper/: AbstractSqlStatementOutboundMapper.java  InboundIdentityTableMapper.java  InboundTableMapper.java  RawSqlStatementOutboundMapper.java  SqlStatementOutboundMapper.java
test/: BusyLightDataProvider.qtest  MqttDataProvider.qtest  QoreDynamicTest.java  QoreDynamicTest10.java  QoreDynamicTest11.java  QoreDynamicTest12.java  QoreDynamicTest13.java  QoreDynamicTest14.java  QoreDynamicTest15.java  QoreDynamicTest16.java  QoreDynamicTest19.java  QoreDynamicTest2.java  QoreDynamicTest3.java  QoreDynamicTest4.java  QoreDynamicTest5.java  QoreDynamicTest6.java  QoreDynamicTest7.java  QoreDynamicTest8.java  QoreDynamicTest9.java  jdbc.qtest  jms.qtest  jni-callback.qtest  jni-compat.qtest  jni.qtest  low_level_jms.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
test/java/src/org/qore/jni/: QoreExceptionWrapper.java
test/java/src/org/qore/jni/test/: A.java  B.java  C.java  Callbacks.java  ClosureTest1.java  ClosureTest2.java  ClosureTest3.java  Fields.java  FloatConversions.java  Methods.java  QoreCallback.java  QoreJavaApiTest.java  StaticFields.java  StaticMethods.java  StringFactory.java
test/java/src/org/qore/lang/test/: QoreJavaLangApiTest.java
